CMakeLists.txt refactor(cont.)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,13 +10,17 @@ CPMAddPackage("gh:onqtam/doctest#2.4.6")
 CPMAddPackage("gh:gabime/spdlog@1.9.2")
 
 option(BUILD_WITH_TEST "build project with test." OFF)
-if (BUILD_WITH_TEST)
+if (CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
   add_executable(${CMAKE_PROJECT_NAME})
-  target_compile_definitions(${CMAKE_PROJECT_NAME} PRIVATE BUILD_WITH_TEST DOCTEST_CONFIG_SUPER_FAST_ASSERTS)
-  add_subdirectory(tests)
+  if (BUILD_WITH_TEST)
+	target_compile_definitions(${CMAKE_PROJECT_NAME} PRIVATE BUILD_WITH_TEST DOCTEST_CONFIG_SUPER_FAST_ASSERTS)
+	target_include_directories(${CMAKE_PROJECT_NAME} PRIVATE "${doctest_SOURCE_DIR}")
+	add_subdirectory(tests)
+  else()
+	add_subdirectory(app)
+  endif()
 else()
   add_library(${CMAKE_PROJECT_NAME})
-  target_compile_definitions(${CMAKE_PROJECT_NAME} PRIVATE DOCTEST_CONFIG_DISABLE)
 endif()
 
 target_compile_features(${CMAKE_PROJECT_NAME} PUBLIC cxx_std_20)
