cmake flag LIB_MODE added.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,9 @@ include(cmake/CPM.cmake)
 CPMAddPackage("gh:onqtam/doctest#2.4.6")
 CPMAddPackage("gh:gabime/spdlog@1.9.2")
 
-option(BUILD_WITH_TEST "build project with test." OFF)
-if (CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
+option(LIB_MODE "build static library." OFF)
+option(BUILD_WITH_TEST "build project with test (unused when LIB_MODE=ON)." OFF)
+if (NOT LIB_MODE AND CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
   add_executable(${CMAKE_PROJECT_NAME})
   if (BUILD_WITH_TEST)
 	target_compile_definitions(${CMAKE_PROJECT_NAME} PRIVATE BUILD_WITH_TEST DOCTEST_CONFIG_SUPER_FAST_ASSERTS)
