--- a/.travis.yml
+++ b/.travis.yml
@@ -37,5 +37,7 @@ before_install: |
   mkdir -p $HOME/.ccache/CPM
 script: |
   cmake -S . -B build -DCMAKE_CXX_FLAGS="${CXX_FLAGS}" -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DBUILD_WITH_TEST=${TEST_ON} -DCMAKE_CXX_COMPILER_LAUNCHER=ccache -DCPM_SOURCE_CACHE=$HOME/.ccache/CPM
+  cmake --build build
+  ./build/minimalcpppj
 after_success: |
-  if [ $COVERAGE == true] ; then bash scripts/run-codecov.sh; fi
+  if [ $COVERAGE == true] ; then bash -x scripts/run-codecov.sh; fi
