--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,6 @@ matrix:
   include:
     - compiler: gcc
       env:
-        - CXX_FLAGS=-Wall -O0 -g --coverage
         - COVERAGE=true
         - TEST_ON=ON
       addons:
@@ -14,29 +13,24 @@ matrix:
           packages: lcov
     - compiler: gcc
       env:
-        - CXX_FLAGS=-Wall -O0 -g --coverage
         - TEST_ON=OFF
     - compiler: gcc
       env:
-        - CXX_FLAGS=-Wall -O0 -g --coverage
         - LIB_MODE=ON
     - compiler: clang
       env:
-        - CXX_FLAGS=-Weverything -Wno-c++98-c++11-c++14-compat -Wno-c++98-compat -Wno-c++98-compat-pedantic -Wno-c++20-compat
         - TEST_ON=ON
     - compiler: clang
       env:
-        - CXX_FLAGS=-Weverything -Wno-c++98-c++11-c++14-compat -Wno-c++98-compat -Wno-c++98-compat-pedantic -Wno-c++20-compat
         - TEST_ON=OFF
     - compiler: clang
       env:
-        - CXX_FLAGS=-Weverything -Wno-c++98-c++11-c++14-compat -Wno-c++98-compat -Wno-c++98-compat-pedantic -Wno-c++20-compat
         - LIB_MODE=ON
 before_install: |
   mkdir -p $HOME/.ccache
   mkdir -p $HOME/.ccache/CPM
 script: |
-  cmake -S . -B build -DCMAKE_CXX_FLAGS="${CXX_FLAGS}" -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DBUILD_WITH_TEST=${TEST_ON} -DCMAKE_CXX_COMPILER_LAUNCHER=ccache -DCPM_SOURCE_CACHE=$HOME/.ccache/CPM
+  cmake -S . -B build -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DBUILD_WITH_TEST=${TEST_ON} -DCMAKE_CXX_COMPILER_LAUNCHER=ccache -DCPM_SOURCE_CACHE=$HOME/.ccache/CPM
   cmake --build build
   ./build/minimalcpppj
 after_success: |
