--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,14 @@
 dist: focal
-sudo: require
+os: linux
 language: cpp
 cache: ccache
-matrix:
+jobs:
   include:
     - compiler: gcc
       env:
         - COVERAGE=true
         - TEST_ON=ON
+        - CXX_FLAGS="-O0 -g --coverage"
       addons:
         apt:
           packages: lcov
@@ -30,7 +31,7 @@ before_install: |
   mkdir -p $HOME/.ccache
   mkdir -p $HOME/.ccache/CPM
 script: |
-  cmake -S . -B build -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DBUILD_WITH_TEST=${TEST_ON} -DCMAKE_CXX_COMPILER_LAUNCHER=ccache -DCPM_SOURCE_CACHE=$HOME/.ccache/CPM
+  cmake -S . -B build -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DBUILD_WITH_TEST=${TEST_ON} -DCMAKE_CXX_COMPILER_LAUNCHER=ccache -DCPM_SOURCE_CACHE=$HOME/.ccache/CPM -DCMAKE_CXX_FLAGS="$CXX_FLAGS"
   cmake --build build
   ./build/minimalcpppj
 after_success: |
